Рефакторинг List.of